Tweaked spawning on MPE bodies, and tweaked terrain/scaledspace.

--- a/GameData/OuterParallax/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
+++ b/GameData/OuterParallax/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:AFTER[MPE]:NEEDS[Parallax_StockTerrainTextures,MPE]
+@Kopernicus:AFTER[MPE]:NEEDS[Parallax_StockTerrainTextures]
 {
     @Body[Edas]
     {
@@ -15,6 +15,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Vant]
     {
@@ -31,6 +36,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Zore]
     {
@@ -47,6 +57,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
 	}
     @Body[LintMikey]
     {
@@ -63,6 +78,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Crokslev]
     {
@@ -79,6 +99,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Geito]
     {
@@ -95,6 +120,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Havous]
     {
@@ -111,6 +141,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Kal]
     {
@@ -127,6 +162,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[KiKi]
     {
@@ -143,6 +183,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Mracksis]
     {
@@ -159,6 +204,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Flake]
     {
@@ -175,10 +225,15 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Ervo]
     {
-        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
+        %cacheFile:NEEDS[!Scatterer] = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -191,6 +246,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Archae]
     {
@@ -207,6 +267,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Soden]
     {
@@ -239,5 +304,10 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
 }
