--- a/GameData/OuterParallax/MPE/_Scatters/Archae.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Archae.cfg
@@ -1,8 +1,8 @@
-ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
+ParallaxScatters
 {
 	Body
 	{
-		name = Archae // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Archae
 		configVersion = 2
 		Scatter
 		{
@@ -33,15 +33,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.560000002
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.5,0.449999988,0.449999988,1
+				_BumpScale = 1
+				_Hapke = 0.560000002
 				_FresnelColor = 0.100000001,0.100000001,0.100000001,1
+				_Color = 0.5,0.449999988,0.449999988,1
 				_CullMode = 2
 				Keywords
 				{
@@ -49,8 +48,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 0.3
-				spawnChance = 1
+				seed = 0.389999986
+				spawnChance = 0.75
 				range = 150
 				populationMultiplier = 300
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -60,7 +59,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.3
+				maxNormalDeviance = 0.916565716
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -84,9 +83,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -119,15 +115,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.560000002
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.5,0.449999988,0.449999988,1
+				_BumpScale = 1
+				_Hapke = 0.560000002
 				_FresnelColor = 0.100000001,0.100000001,0.100000001,1
+				_Color = 0.5,0.449999988,0.449999988,1
 				_CullMode = 2
 				Keywords
 				{
@@ -135,8 +130,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 3.3
-				spawnChance = 0.7
+				seed = 3.33999991
+				spawnChance = 0.699999988
 				range = 650
 				populationMultiplier = 150
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -146,7 +141,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.16
+				maxNormalDeviance = 0.891944647
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -170,9 +165,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -205,15 +197,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.560000002
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.5,0.449999988,0.449999988,1
+				_BumpScale = 1
+				_Hapke = 0.560000002
 				_FresnelColor = 0.100000001,0.100000001,0.100000001,1
+				_Color = 0.5,0.449999988,0.449999988,1
 				_CullMode = 2
 				Keywords
 				{
@@ -221,8 +212,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 7
-				spawnChance = 0.4
+				seed = 7.0999999
+				spawnChance = 0.649999976
 				range = 1600
 				populationMultiplier = 65
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -232,7 +223,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.347520262
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -243,7 +234,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
-						range = 60
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
@@ -251,14 +242,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
-						range = 120
+						range = 120.000008
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -291,15 +279,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.560000002
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.5,0.449999988,0.449999988,1
+				_BumpScale = 1
+				_Hapke = 0.560000002
 				_FresnelColor = 0.100000001,0.100000001,0.100000001,1
+				_Color = 0.5,0.449999988,0.449999988,1
 				_CullMode = 2
 				Keywords
 				{
@@ -307,8 +294,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 7.1
-				spawnChance = 0.65
+				seed = 7.13999987
+				spawnChance = 0.699999988
 				range = 1600
 				populationMultiplier = 8
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -318,7 +305,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.896156549
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -329,7 +316,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod1
-						range = 15
+						range = 15.000001
 						MaterialOverride
 						{
 						}
@@ -337,14 +324,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod2
-						range = 30
+						range = 30.0000019
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -377,15 +361,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.560000002
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.5,0.449999988,0.449999988,1
+				_BumpScale = 1
+				_Hapke = 0.560000002
 				_FresnelColor = 0.100000001,0.100000001,0.100000001,1
+				_Color = 0.5,0.449999988,0.449999988,1
 				_CullMode = 2
 				Keywords
 				{
@@ -393,18 +376,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 5.3
-				spawnChance = 0.3
+				seed = 5.30000019
+				spawnChance = 0.400000006
 				range = 1650
 				populationMultiplier = 6
-				minScale = 0.1,0.1,0.1
-				maxScale = 0.15,0.15,0.15
+				minScale = 0.100000001,0.100000001,0.100000001
+				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
-				cutoffScale = 0.3
+				cutoffScale = 0.300000012
 				steepPower = 3
 				steepContrast = 4.5
-				steepMidpoint = 0.731
-				maxNormalDeviance = 0.3
+				steepMidpoint = 0.731000006
+				maxNormalDeviance = 0.44814086
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -428,9 +411,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -463,15 +443,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.560000002
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.5,0.449999988,0.449999988,1
+				_BumpScale = 1
+				_Hapke = 0.560000002
 				_FresnelColor = 0.100000001,0.100000001,0.100000001,1
+				_Color = 0.5,0.449999988,0.449999988,1
 				_CullMode = 2
 				Keywords
 				{
@@ -479,7 +458,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 5
+				seed = 5.80000019
 				spawnChance = 0.5
 				range = 2000
 				populationMultiplier = 5
@@ -490,7 +469,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.896156549
 				minAltitude = 15
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -514,9 +493,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
