--- a/GameData/OuterParallax/MPE/_Scatters/Edas.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Edas.cfg
@@ -1,4 +1,4 @@
-ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
+ParallaxScatters
 {
 	Body
 	{
@@ -33,15 +33,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 1.20000005
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.430000007
-				_BumpScale = 1
+				_SpecularIntensity = 1.20000005
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -49,10 +48,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 0.3
+				seed = 0.300000012
 				spawnChance = 1
 				range = 150
-				populationMultiplier = 21
+				populationMultiplier = 7
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -60,7 +59,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.3
+				maxNormalDeviance = 0.30000037
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -84,9 +83,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -119,15 +115,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 1.20000005
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.430000007
-				_BumpScale = 1
+				_SpecularIntensity = 1.20000005
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -135,10 +130,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 3.3
+				seed = 3.29999995
 				spawnChance = 1
 				range = 650
-				populationMultiplier = 7
+				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -146,7 +141,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.16
+				maxNormalDeviance = 0.160000309
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -170,9 +165,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -205,15 +197,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 1.20000005
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.430000007
-				_BumpScale = 1
+				_SpecularIntensity = 1.20000005
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -232,7 +223,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.130000278
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -256,9 +247,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -291,15 +279,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 1.20000005
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.430000007
-				_BumpScale = 1
+				_SpecularIntensity = 1.20000005
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -318,7 +305,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.130000278
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -342,9 +329,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
