--- a/GameData/OuterParallax/MPE/_Scatters/Kal.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Kal.cfg
@@ -1,4 +1,4 @@
-ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
+ParallaxScatters
 {
 	Body
 	{
@@ -33,15 +33,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.2
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.200000003
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -49,18 +48,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 0.3
-				spawnChance = 0.9
+				seed = 0.300000012
+				spawnChance = 0.699999988
 				range = 150
-				populationMultiplier = 4
-				minScale = 0.100, 0.100, 0.100
-				maxScale = 0.400, 0.400, 0.400
+				populationMultiplier = 2
+				minScale = 0.100000001,0.100000001,0.100000001
+				maxScale = 0.400000006,0.400000006,0.400000006
 				scaleRandomness = 0.5
 				cutoffScale = 0.0500000007
 				steepPower = 20
 				steepContrast = 1
-				steepMidpoint = 0.9
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.899999976
+				maxNormalDeviance = 0.430000395
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -84,9 +83,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -119,15 +115,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.2
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.200000003
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -136,17 +131,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 1
-				spawnChance = 0.7
+				spawnChance = 0.5
 				range = 150
-				populationMultiplier = 2
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				populationMultiplier = 1
+				minScale = 0.300000012,0.300000012,0.300000012
+				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
-				cutoffScale = 0.01
+				cutoffScale = 0.00999999978
 				steepPower = 20
 				steepContrast = 1
-				steepMidpoint = 0.9
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.899999976
+				maxNormalDeviance = 0.430000395
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -170,9 +165,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -205,15 +197,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.2
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.63,0.7,0.75,1
-				_FresnelColor = 0.15,0.15,0.15
+				_BumpScale = 1.70000005
+				_Hapke = 0.200000003
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.629999995,0.699999988,0.75,1
 				_CullMode = 2
 				Keywords
 				{
@@ -221,18 +212,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 2.8
-				spawnChance = 0.35
+				seed = 0.300000012
+				spawnChance = 0.125
 				range = 650
 				populationMultiplier = 1
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				minScale = 0.300000012,0.300000012,0.300000012
+				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
 				cutoffScale = 0.0700000003
 				steepPower = 20
 				steepContrast = 1
-				steepMidpoint = 0.9
-				maxNormalDeviance = 0.7
+				steepMidpoint = 0.899999976
+				maxNormalDeviance = 0.700000286
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -256,9 +247,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -291,15 +279,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.2
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.63,0.7,0.75,1
-				_FresnelColor = 0.15,0.15,0.15
+				_BumpScale = 1.70000005
+				_Hapke = 0.200000003
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.629999995,0.699999988,0.75,1
 				_CullMode = 2
 				Keywords
 				{
@@ -308,17 +295,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 0.4
+				spawnChance = 0.109999999
 				range = 900
 				populationMultiplier = 1
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				minScale = 0.300000012,0.300000012,0.300000012
+				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
-				cutoffScale = 0.3
+				cutoffScale = 0.300000012
 				steepPower = 20
 				steepContrast = 1
-				steepMidpoint = 0.9
-				maxNormalDeviance = 0.32
+				steepMidpoint = 0.899999976
+				maxNormalDeviance = 0.32000038
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -329,7 +316,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
-						range = 60
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
@@ -337,14 +324,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
-						range = 120
+						range = 120.000008
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -377,15 +361,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.2
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.63,0.7,0.75,1
-				_FresnelColor = 0.15,0.15,0.15
+				_BumpScale = 1.70000005
+				_Hapke = 0.200000003
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.629999995,0.699999988,0.75,1
 				_CullMode = 2
 				Keywords
 				{
@@ -394,17 +377,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 7
-				spawnChance = 0.25
+				spawnChance = 0.200000003
 				range = 2000
 				populationMultiplier = 1
-				minScale = 0.4,0.4,0.4
-				maxScale = 0.8,0.8,0.8
+				minScale = 0.400000006,0.400000006,0.400000006
+				maxScale = 0.800000012,0.800000012,0.800000012
 				scaleRandomness = 0.5
-				cutoffScale = 0.64
+				cutoffScale = 0.639999986
 				steepPower = 20
 				steepContrast = 1
-				steepMidpoint = 0.9
-				maxNormalDeviance = 0.16
+				steepMidpoint = 0.899999976
+				maxNormalDeviance = 0.160000309
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -428,9 +411,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -463,15 +443,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.2
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.63,0.7,0.75,1
-				_FresnelColor = 0.15,0.15,0.15
+				_BumpScale = 1.70000005
+				_Hapke = 0.200000003
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.629999995,0.699999988,0.75,1
 				_CullMode = 2
 				Keywords
 				{
@@ -479,18 +458,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 8.5
-				spawnChance = 0.2
+				seed = 8.51000023
+				spawnChance = 0.200000003
 				range = 2000
-				populationMultiplier = 2
-				minScale = 0.4,0.4,0.4
-				maxScale = 0.8,0.8,0.8
+				populationMultiplier = 1
+				minScale = 0.400000006,0.400000006,0.400000006
+				maxScale = 0.800000012,0.800000012,0.800000012
 				scaleRandomness = 0.5
-				cutoffScale = 0.64
+				cutoffScale = 0.639999986
 				steepPower = 20
 				steepContrast = 1
-				steepMidpoint = 0.9
-				maxNormalDeviance = 0.16
+				steepMidpoint = 0.899999976
+				maxNormalDeviance = 0.160000309
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -514,9 +493,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -549,15 +525,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.2
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.63,0.7,0.75,1
-				_FresnelColor = 0.15,0.15,0.15
+				_BumpScale = 1.70000005
+				_Hapke = 0.200000003
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.629999995,0.699999988,0.75,1
 				_CullMode = 2
 				Keywords
 				{
@@ -566,17 +541,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.2
+				spawnChance = 0.125
 				range = 2000
 				populationMultiplier = 1
-				minScale = 0.4,0.4,0.4
-				maxScale = 0.8,0.8,0.8
+				minScale = 0.400000006,0.400000006,0.400000006
+				maxScale = 0.800000012,0.800000012,0.800000012
 				scaleRandomness = 0.5
-				cutoffScale = 0.64
+				cutoffScale = 0.639999986
 				steepPower = 20
 				steepContrast = 1
-				steepMidpoint = 0.9
-				maxNormalDeviance = 0.16
+				steepMidpoint = 0.899999976
+				maxNormalDeviance = 0.160000309
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -600,9 +575,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
