--- a/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
+++ b/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
@@ -1,7 +1,7 @@
 ParallaxTerrain
 {
 	Body
-	{ // **
+	{
 		name = Hale
 		emissive = True
 		ShaderProperties
@@ -14,32 +14,31 @@ ParallaxTerrain
 			_BumpMapMid = OuterParallax/Textures/PluginData/Regolith_Nrm.dds
 			_BumpMapHigh = OuterParallax/Textures/PluginData/Regolith_Nrm.dds
 			_BumpMapSteep = OuterParallax/Textures/PluginData/Regolith_Nrm.dds
-			_DisplacementMap = OuterParallax/Textures/PluginData/Regolith_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/PluginData/Regolith_Inf.dds
+			_DisplacementMap = OuterParallax/Textures/PluginData/Regolith_Disp.dds
 			_OcclusionMap = OuterParallax/OPM/_Textures/PluginData/Surface/Hale_AO.dds
-			_SteepPower = 0
-			_SteepContrast = 1
-			_SteepMidpoint = 0.5
-			_DisplacementScale = 0.08
+			_DisplacementScale = 0.0799999982
 			_DisplacementOffset = 0
-			_SpecularIntensity = 0.3
-			_SpecularPower = 10
-			_EnvironmentMapFactor = 0.5
-			_Hapke = 0.5
-			_EmissionColor = 0.05,0.05,0.05,1
-			_FresnelColor = 0.1,0.1,0.1,1
-			_FresnelPower = 2
-			_BumpScale = 2.5
-			_RefractionIntensity = 0
 			_LowMidBlendStart = -500
 			_LowMidBlendEnd = -499
 			_MidHighBlendStart = -498
 			_MidHighBlendEnd = -497
+			_SteepPower = 0
+			_SteepContrast = 1
+			_SteepMidpoint = 0.5
+			_SpecularPower = 232
+			_SpecularIntensity = 1
+			_FresnelPower = 2
+			_EnvironmentMapFactor = 0.5
+			_RefractionIntensity = 0
 			_Tiling = 0.0666666701
+			_Hapke = 0.5
+			_BumpScale = 2.5
+			_EmissionColor = 0.0500000007,0.0500000007,0.0500000007,1
 		}
 	}
 	Body
-	{ // **
+	{
 		name = Ovok
 		emissive = True
 		ShaderProperties
@@ -75,9 +74,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = 10001
 			_Tiling = 0.08
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = 0
+			maxTerrainAltitude = 14000
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 10
+				_SpecularIntensity = 0.7
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 0.3
+				_Tiling = 0.002
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Slate
 		emissive = True
 		ShaderProperties
@@ -113,9 +136,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = 1500
 			_Tiling = 0.0600000024
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -1088
+			maxTerrainAltitude = 16416
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 10
+				_SpecularIntensity = 0.7
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 0.3
+				_Tiling = 0.002
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Tekto
 		emissive = False
 		ShaderProperties
@@ -151,9 +198,40 @@ ParallaxTerrain
 			_MidHighBlendEnd = 1500
 			_Tiling = 0.0666666701
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -631
+			maxTerrainAltitude = 5954
+			usingStockMesh = True
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_height.dds
+				_AtmosphereRimMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_Atmo.dds
+				_PlanetBumpScale = 1
+				_OceanSpecularPower = 0.5
+				_OceanSpecularIntensity = 0.35
+				_AtmosphereThickness = 2.33
+				_OceanAltitude = 0
+				Keywords
+				{
+					name = OCEAN
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 20
+				_SpecularIntensity = 0.5
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 0.8
+				_Tiling = 0.001
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Tal
 		emissive = False
 		ShaderProperties
@@ -189,9 +267,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = 33500
 			_Tiling = 0.0666666701
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -62
+			maxTerrainAltitude = 11904
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 45
+				_SpecularIntensity = 0.3
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 1.3
+				_Tiling = 0.001
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Wal
 		emissive = False
 		ShaderProperties
@@ -227,9 +329,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = 3300
 			_Tiling = 0.0666666701
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -582
+			maxTerrainAltitude = 20760
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 40
+				_SpecularIntensity = 0.15
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 0.6
+				_Tiling = 0.003
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Priax
 		emissive = False
 		ShaderProperties
@@ -265,9 +391,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = -497
 			_Tiling = 0.0666666701
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = 8240
+			maxTerrainAltitude = 30479
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 36
+				_SpecularIntensity = 0.25
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 1.0
+				_Tiling = 0.0006
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Polta
 		emissive = False
 		ShaderProperties
@@ -303,9 +453,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = 90001
 			_Tiling = 0.0666666701
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -466
+			maxTerrainAltitude = 8835
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_Tiling = 0.003
+				_BumpScale = 0.5
+				_SpecularPower = 35
+				_SpecularIntensity = 0.4
+				_EmissionColor = 0,0,0,1
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Thatmo
 		emissive = False
 		ShaderProperties
@@ -341,9 +515,39 @@ ParallaxTerrain
 			_MidHighBlendEnd = 10001
 			_Tiling = 0.08
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -341
+			maxTerrainAltitude = 4981
+			usingStockMesh = True
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_height.dds
+				_AtmosphereRimMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_Atmo.dds
+				_PlanetBumpScale = 1
+				_OceanSpecularPower = 0.5
+				_OceanSpecularIntensity = 0.35
+				_AtmosphereThickness = 2.33
+				_OceanAltitude = 0
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 32
+				_SpecularIntensity = 0.6
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 1.1
+				_Tiling = 0.0004
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Nissee
 		emissive = False
 		ShaderProperties
@@ -379,9 +583,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = -497
 			_Tiling = 0.0666666701
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = 1933
+			maxTerrainAltitude = 9113
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 32
+				_SpecularIntensity = 0.2
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 1.3
+				_Tiling = 0.0005
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Plock
 		emissive = True
 		ShaderProperties
@@ -417,9 +645,33 @@ ParallaxTerrain
 			_MidHighBlendEnd = 10000
 			_Tiling = 0.07
 		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -461
+			maxTerrainAltitude = 4655
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 6
+				_SpecularIntensity = 0.1
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 0.3
+				_Tiling = 0.0003
+			}
+		}
 	}
 	Body
-	{ // **
+	{
 		name = Karen
 		emissive = False
 		ShaderProperties
@@ -454,6 +706,30 @@ ParallaxTerrain
 			_MidHighBlendStart = 1400
 			_MidHighBlendEnd = 1700
 			_Tiling = 0.08
+		}
+		ParallaxScaledProperties
+		{
+			minTerrainAltitude = -420
+			maxTerrainAltitude = 4655
+			mode = FromTerrain
+			Material
+			{
+				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_color.dds
+				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_normal.dds
+				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_height.dds
+				_PlanetBumpScale = 1
+				Keywords
+				{
+				}
+			}
+			TerrainMaterialOverride
+			{
+				_SpecularPower = 22
+				_SpecularIntensity = 0.1
+				_EmissionColor = 0,0,0,1
+				_BumpScale = 1.5
+				_Tiling = 0.0003
+			}
 		}
 	}
 }
