--- a/GameData/OuterParallax/OPM/_Configs/IncreaseSubdivisionCount_C.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/IncreaseSubdivisionCount_C.cfg
@@ -15,6 +15,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Ovok]
     {
@@ -31,6 +36,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Slate]
     {
@@ -47,10 +57,15 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
 	}
     @Body[Tekto]
     {
-        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
+        %cacheFile:NEEDS[!Scatterer] = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -63,6 +78,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Tal]
     {
@@ -79,6 +99,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Wal]
     {
@@ -95,6 +120,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Priax]
     {
@@ -111,6 +141,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Polta]
     {
@@ -127,10 +162,15 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Thatmo]
     {
-        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
+        %cacheFile:NEEDS[!Scatterer] = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -143,6 +183,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Nissee]
     {
@@ -159,6 +204,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Plock]
     {
@@ -175,6 +225,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Karen]
     {
@@ -191,5 +246,10 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
 }
