--- a/GameData/OuterParallax/MPE/_Scatters/Vant.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Vant.cfg
@@ -33,15 +33,14 @@ ParallaxScatters
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.43
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1.2,1.2,1.2,1
-				_FresnelColor = 0.15,0.15,0.15,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1.20000005,1.20000005,1.20000005,1
 				_CullMode = 2
 				Keywords
 				{
@@ -49,18 +48,18 @@ ParallaxScatters
 			}
 			Distribution
 			{
-				seed = 14
+				seed = 14.1999998
 				spawnChance = 1
 				range = 150
 				populationMultiplier = 120
-				minScale = 0.1,0.1,0.1
-				maxScale = 0.2,0.2,0.2
+				minScale = 0.100000001,0.100000001,0.100000001
+				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
-				cutoffScale = 0.05
+				cutoffScale = 0.0500000007
 				steepPower = 3
 				steepContrast = 4.5
-				steepMidpoint = 0.731
-				maxNormalDeviance = 0.3
+				steepMidpoint = 0.731000006
+				maxNormalDeviance = 0.30000037
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -84,9 +83,6 @@ ParallaxScatters
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -119,15 +115,14 @@ ParallaxScatters
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.43
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1.2,1.2,1.2,1
-				_FresnelColor = 0.15,0.15,0.15,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1.20000005,1.20000005,1.20000005,1
 				_CullMode = 2
 				Keywords
 				{
@@ -135,18 +130,18 @@ ParallaxScatters
 			}
 			Distribution
 			{
-				seed = 10
+				seed = 10.6000004
 				spawnChance = 1
 				range = 150
 				populationMultiplier = 120
-				minScale = 0.1,0.1,0.1
-				maxScale = 0.2,0.2,0.2
+				minScale = 0.100000001,0.100000001,0.100000001
+				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
-				cutoffScale = 0.01
+				cutoffScale = 0.00999999978
 				steepPower = 3
 				steepContrast = 4.5
-				steepMidpoint = 0.731
-				maxNormalDeviance = 0.3
+				steepMidpoint = 0.731000006
+				maxNormalDeviance = 0.30000037
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -170,9 +165,6 @@ ParallaxScatters
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
