--- a/GameData/OuterParallax/OPM/_Scatters/Slate.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Slate.cfg
@@ -1,4 +1,4 @@
-ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
+ParallaxScatters
 {
 	Body
 	{
@@ -48,8 +48,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			}
 			Distribution
 			{
-				seed = 0
-				spawnChance = 1
+				seed = 0.319999993
+				spawnChance = 0.75
 				range = 150
 				populationMultiplier = 200
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -59,7 +59,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.420000374
+				maxNormalDeviance = 0.420000762
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -142,8 +142,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			}
 			Distribution
 			{
-				seed = 1
-				spawnChance = 1
+				seed = 1.29999995
+				spawnChance = 0.75
 				range = 150
 				populationMultiplier = 200
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -153,7 +153,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.420000374
+				maxNormalDeviance = 0.420000762
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -237,9 +237,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			Distribution
 			{
 				seed = 3.30999994
-				spawnChance = 1
+				spawnChance = 0.75
 				range = 650
-				populationMultiplier = 45
+				populationMultiplier = 65
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -247,7 +247,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.220000699
+				maxNormalDeviance = 0.220001027
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -330,10 +330,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			}
 			Distribution
 			{
-				seed = 4.9000001
+				seed = 4.90999985
 				spawnChance = 1
 				range = 650
-				populationMultiplier = 30
+				populationMultiplier = 42
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -341,7 +341,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.220000699
+				maxNormalDeviance = 0.220001027
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -435,7 +435,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.220000699
+				maxNormalDeviance = 0.220001027
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -529,7 +529,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.220000699
+				maxNormalDeviance = 0.220001027
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -623,7 +623,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.220000699
+				maxNormalDeviance = 0.220001027
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -717,7 +717,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 2
 				steepContrast = 1
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.420000374
+				maxNormalDeviance = 0.420000762
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
