--- a/GameData/OuterParallax/OPM/_Scatters/Tal.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Tal.cfg
@@ -1,4 +1,4 @@
-ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
+ParallaxScatters
 {
 	Body
 	{
@@ -49,9 +49,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			Distribution
 			{
 				seed = 0
-				spawnChance = 1
+				spawnChance = 0.699999988
 				range = 150
-				populationMultiplier = 13
+				populationMultiplier = 6
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -59,7 +59,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000346
+				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -131,9 +131,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			Distribution
 			{
 				seed = 1
-				spawnChance = 1
+				spawnChance = 0.699999988
 				range = 150
-				populationMultiplier = 12
+				populationMultiplier = 6
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -141,7 +141,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000346
+				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -213,7 +213,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			Distribution
 			{
 				seed = 3
-				spawnChance = 1
+				spawnChance = 0.649999976
 				range = 650
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -223,7 +223,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000346
+				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -295,7 +295,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 1
+				spawnChance = 0.649999976
 				range = 900
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -305,7 +305,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000346
+				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -387,7 +387,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000346
+				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -469,7 +469,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000346
+				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
